<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@color/color_transparent"
    >

    <TextView
        android:id="@+id/trail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trail_name"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/hike_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:padding="5dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:paddingLeft="10dp"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textColor="@color/black"

        android:textSize="15sp"/>

    <EditText
        android:id="@+id/hike_location"
        android:textColor="@color/black"
        android:paddingLeft="10dp"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
       />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/journal_entry"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"/>

    <EditText
        android:id="@+id/journal_entry_edit"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:paddingLeft="10dp"
        android:minHeight="150dp"
        android:layout_height="wrap_content"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="50dp"
    android:paddingLeft="10dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:text="@string/difficulty_name" />

    <EditText
        android:id="@+id/hike_difficulty"
        android:layout_width="144dp"
        android:layout_height="match_parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/distance" />


    <EditText
        android:id="@+id/hike_distance"
        android:layout_width="146dp"
        android:layout_height="wrap_content" />
</LinearLayout>

    <CheckBox
        android:id="@+id/hike_visited"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:text="@string/hike_visited_label" />


</LinearLayout>